--- a/nx.json
+++ b/nx.json
@@ -21,6 +21,10 @@
     },
     "e2e": {
       "cache": true
+    },
+    "@nx/vite:test": {
+      "cache": true,
+      "inputs": ["default", "^production"]
     }
   },
   "namedInputs": {
