--- a/package.json
+++ b/package.json
@@ -10,36 +10,37 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@nx/eslint": "17.1.1",
-    "@nx/eslint-plugin": "17.1.1",
-    "@nx/js": "17.1.1",
-    "@nx/react": "17.1.1",
-    "@nx/vite": "17.1.1",
-    "@nx/workspace": "17.1.1",
+    "@nx/eslint": "17.0.0",
+    "@nx/eslint-plugin": "17.0.0",
+    "@nx/js": "17.0.0",
+    "@nx/react": "17.0.0",
+    "@nx/vite": "17.0.0",
+    "@nx/workspace": "17.0.0",
     "@originjs/vite-plugin-federation": "^1.3.2",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
     "@types/node": "18.14.2",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
-    "@typescript-eslint/eslint-plugin": "6.10.0",
-    "@typescript-eslint/parser": "6.10.0",
+    "@types/react": "18.2.24",
+    "@types/react-dom": "18.2.9",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "@vitejs/plugin-react": "~4.0.0",
     "@vitest/coverage-c8": "~0.32.0",
     "@vitest/ui": "~0.32.0",
     "eslint": "~8.46.0",
-    "eslint-config-prettier": "9.0.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jsdom": "~22.1.0",
-    "nx": "17.1.1",
+    "nx": "17.0.0",
     "prettier": "^2.6.2",
-    "typescript": "5.2.2",
+    "typescript": "~5.1.3",
     "vite": "~4.3.9",
     "vitest": "~0.32.0"
   }
 }
+
