migrate to nx 18 and project crystal

--- a/apps/host/project.json
+++ b/apps/host/project.json
@@ -2,69 +2,5 @@
   "name": "host",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/host/src",
-  "projectType": "application",
-  "targets": {
-    "build": {
-      "executor": "@nx/vite:build",
-      "outputs": ["{options.outputPath}"],
-      "defaultConfiguration": "production",
-      "options": {
-        "outputPath": "dist/apps/host"
-      },
-      "configurations": {
-        "development": {
-          "mode": "development"
-        },
-        "production": {
-          "mode": "production"
-        }
-      }
-    },
-    "serve": {
-      "executor": "@nx/vite:dev-server",
-      "defaultConfiguration": "development",
-      "options": {
-        "buildTarget": "host:build",
-        "port": 5000
-      },
-      "configurations": {
-        "development": {
-          "buildTarget": "host:build:development",
-          "hmr": true
-        },
-        "production": {
-          "buildTarget": "host:production",
-          "hmr": false
-        }
-      }
-    },
-    "preview": {
-      "executor": "@nx/vite:preview-server",
-      "defaultConfiguration": "development",
-      "options": {
-        "buildTarget": "host:build"
-      },
-      "configurations": {
-        "development": {
-          "buildTarget": "host:build:development"
-        },
-        "production": {
-          "buildTarget": "host:build:production"
-        }
-      }
-
-    },
-    "vite-preview": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "vite preview apps/host"
-      }
-    },
-    "vite-build": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "vite build apps/host"
-      }
-    }
-  }
+  "projectType": "application"
 }
