--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@nx/eslint": "18.0.0",
-    "@nx/eslint-plugin": "18.0.0",
-    "@nx/js": "18.0.0",
-    "@nx/react": "18.0.0",
-    "@nx/vite": "18.0.0",
-    "@nx/workspace": "18.0.0",
+    "@nx/eslint": "18.0.5",
+    "@nx/eslint-plugin": "18.0.5",
+    "@nx/js": "18.0.5",
+    "@nx/react": "18.0.5",
+    "@nx/vite": "18.0.5",
+    "@nx/workspace": "18.0.5",
     "@originjs/vite-plugin-federation": "^1.3.2",
-    "@swc-node/register": "~1.6.7",
+    "@swc-node/register": "1.8.0",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
@@ -36,7 +36,7 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jsdom": "~22.1.0",
-    "nx": "18.0.0",
+    "nx": "18.0.5",
     "prettier": "^2.6.2",
     "typescript": "5.3.3",
     "vite": "5.1.4",
